--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>ODin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/french-toast.html">French toast</a></li>
+        <li><a href="recipes/lime-cilantro-rice.html">Lime Cilantro Rice</a></li>
+      </ul>
 </body>
 </html>
