--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna Recipe</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
    <h1>Lasgna Recipe</h1> 
@@ -23,7 +24,7 @@
     <li>Egg: An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>
 </ul>
 
-<h2>Steps</h2>
+<h2>Steps</h2> 
 <ol>
     <li>Make the meat sauce.</li>
     <li>Cook the noodles.</li>
