--- a/recipes/lime-cilantro-rice.html
+++ b/recipes/lime-cilantro-rice.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lime Cilantro Rice Recipe</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
    <h1>Lime Cilantro Rice Recipe</h1> 
